k8s/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
  namespace: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: knawhuc/postgres_reconciliation_worker:postgres-0.4
        ports:
        - containerPort: 5432
