k8s/workers.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workers-deployment
  labels:
    app: workers
  namespace: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workers
  template:
    metadata:
      labels:
        app: workers
    spec:
      volumes:
        - name: outputshare
          emptyDir: {}
      containers:
        - name: timworker
          image: knawhuc/postgres_reconciliation_worker:timbuctoo_worker-0.6
          volumeMounts:
            - mountPath: /output
              name: outputshare
        - name: jobsworker
          image: knawhuc/postgres_reconciliation_worker:jobs_worker-0.6
          volumeMounts:
            - mountPath: /output
              name: outputshare
        - name: webserver
          image: knawhuc/postgres_reconciliation_worker:web_server-0.6
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /output
              name: outputshare
