k8s/postgres.service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: stage
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
