k8s/worker.service.yml
apiVersion: v1
kind: Service
metadata:
  name: workers
  namespace: stage
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: workers
  type: ClusterIP
